--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <p class="barbers-text top-text">For true enjoyers of the atmosphere</p>
           <h2 class="barbers-title">Our barbers</h2>
           <ul class="barbers-list">
-            <li class="list">
+            <li class="list barbers-item">
               <img src="./images/barber1.jpg" width="370" alt="barber-1" />
               <h3 class="barbers-name">John Smith</h3>
               <p class="barbers-position">Extreme Barber</p>
@@ -196,7 +196,7 @@
               </li>
               </ul>
             </li>
-            <li class="list">
+            <li class="list barbers-item">
               <img src="./images/barber2.jpg" width="370" alt="barber-2" />
               <h3 class="barbers-name">Michele Doe</h3>
               <p class="barbers-position">Extreme Barber</p>
@@ -227,7 +227,7 @@
                 </a></li>
               </ul>
             </li>
-            <li class="list">
+            <li class="list barbers-item">
               <img src="./images/barber3.jpg" width="370" alt="barber-3" />
               <h3 class="barbers-name">Alan Black</h3>
               <p class="barbers-position">Extreme Barber</p>
