--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
             <ul class="menu-container-list">
               <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">About</a></li>
               <li class="list menu-container-item">
-                <a href="#" class="link nav icon-nav">Services and prices</a>
+                <a href="#" class="link nav menu-container-link">Services and prices</a>
               </li>
               <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">Barbers</a></li>
               <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">Contacts</a></li>
             </ul>
              <div class="menu-container-contact">
               <a href="tel:+380441111111" class="link nav menu-container-link">+38 044 111 11 11</a>
-              <button type="button" class="button btn-secondary">Online-booking</button>
-            </div>   
+              <button type="button" class="button btn-secondary button-menu-header">Online-booking</button>
+            </div>  
+            <ul class="menu-networks">
+              <li class="list menu-social-networks-list"><a href="#" class="link menu-social-networks-link">Instagram</a></li>
+              <li class="list menu-social-networks-list"><a href="#" class="link  menu-social-networks-link">Youtube</a></li>
+            </ul> 
           </div>
 
         </div>
