--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           <div class="container about-list">
           <ul class="about-list">
           <li class="list about-list-img">
-            <img src="./images/img1.jpg" alt="Beard" width="270" />
+            <img src="./images/img1-desktop.jpg" alt="Beard" width="270" />
           </li>
           <li class="list about-list-img">
-            <img src="./images/img2.jpg" alt="Hair" width="270" />
+            <img src="./images/img2-desktop.jpg" alt="Hair" width="270" />
           </li>
         </ul>
           <div>
