--- a/index.html
+++ b/index.html
@@ -88,12 +88,32 @@
         </section>
         <section class="about">
           <div class="container about-list">
-          <ul class="about-list">
-          <li class="list about-list-img">
-            <img src="./images/img1-desktop.jpg" alt="Beard" width="270" />
+          <ul class="about-list-image">
+          <li class="list about-item-img">
+            <picture>
+              <source 
+                srcset="./images/img1-desktop.jpg 1x, 
+                ./images/img1-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/img1-tablet.jpg 1x, 
+                ./images/img1-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <img src="./images/img1-desktop.jpg" alt="Beard" /> 
+            </picture>
           </li>
-          <li class="list about-list-img">
-            <img src="./images/img2-desktop.jpg" alt="Hair" width="270" />
+          <li class="list about-item-img">
+            <picture>
+              <source 
+                srcset="./images/img2-desktop.jpg 1x, 
+                ./images/img2-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/img2-tablet.jpg 1x, 
+                ./images/img2-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+              <img src="./images/img2-desktop.jpg" alt="Hair"/>
+            </picture>
           </li>
         </ul>
           <div>
@@ -230,7 +250,21 @@
           <h2 class="barbers-title">Our barbers</h2>
           <ul class="barbers-list">
             <li class="list barbers-item">
-              <img src="./images/barber1.jpg" width="370" alt="barber-1" />
+              <picture>
+                <source 
+                srcset="./images/barber1-desktop.jpg 1x, 
+                ./images/barber1-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/barber1-tablet.jpg 1x, 
+                ./images/barber1-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/barber1-mobile.jpg 1x, 
+                ./images/barber1-mobile-2x.jpg 2x"
+                media="(max-width: 767px)">
+                <img src="./images/barber1-desktop.jpg" width="450" alt="barber-1" />
+              </picture>
               <h3 class="barbers-name">John Smith</h3>
               <p class="barbers-position">Extreme Barber</p>
               <ul class="icon-networks-main">
@@ -260,7 +294,21 @@
               </ul>
             </li>
             <li class="list barbers-item">
-              <img src="./images/barber2.jpg" width="370" alt="barber-2" />
+              <picture>
+                <source 
+                srcset="./images/barber2-desktop.jpg 1x, 
+                ./images/barber2-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/barber2-tablet.jpg 1x, 
+                ./images/barber2-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/barber2-mobile.jpg 1x, 
+                ./images/barber2-mobile-2x.jpg 2x"
+                media="(max-width: 767px)">
+                <img src="./images/barber2-desktop.jpg" width="450" alt="barber-2" />
+              </picture>
               <h3 class="barbers-name">Michele Doe</h3>
               <p class="barbers-position">Extreme Barber</p>
               <ul class="icon-networks-main">
@@ -291,7 +339,21 @@
               </ul>
             </li>
             <li class="list barbers-item">
-              <img src="./images/barber3.jpg" width="370" alt="barber-3" />
+              <picture>
+                <source 
+                srcset="./images/barber3-desktop.jpg 1x, 
+                ./images/barber3-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/barber3-tablet.jpg 1x, 
+                ./images/barber3-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/barber3-mobile.jpg 1x, 
+                ./images/barber3-mobile-2x.jpg 2x"
+                media="(max-width: 767px)">
+                <img src="./images/barber3-desktop.jpg" width="450" alt="barber-3"/>
+              </picture>
               <h3 class="barbers-name">Alan Black</h3>
               <p class="barbers-position">Extreme Barber</p>
               <ul class="icon-networks-main">
@@ -328,10 +390,74 @@
         <div class="container">
           <p class="portfolio-text top-text">In Latin, "barba" means "beard"</p>
           <ul class="portfolio-photos-list list">
-            <li class="portfolio-photos-item"><img src="./images/Rectangle1.jpg" width="270" alt="Rectangle-1" /></li>
-            <li class="portfolio-photos-item"><img src="./images/Rectangle2.jpg" width="270" alt="Rectangle-2" /></li>
-            <li class="portfolio-photos-item"><img src="./images/Rectangle3.jpg" width="270" alt="Rectangle-3" /></li>
-            <li class="portfolio-photos-item"><img src="./images/Rectangle4.jpg" width="270" alt="Rectangle-4" /></li>  
+            <li class="portfolio-photos-item">
+              <picture>
+                <source 
+                srcset="./images/rectangle1-desktop.jpg 1x, 
+                ./images/rectangle1-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/rectangle1-tablet.jpg 1x, 
+                ./images/rectangle1-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/rectangle1-mobile.jpg 1x, 
+                ./images/rectangle1-mobile-2x.jpg 2x"
+                media="(max-width: 767px)">
+                <img src="./images/rectangle1-desktop.jpg" width="418" alt="Rectangle-1"/>
+              </picture>
+            </li>
+            <li class="portfolio-photos-item">
+              <picture>
+                <source 
+                srcset="./images/rectangle2-desktop.jpg 1x, 
+                ./images/rectangle2-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/rectangle2-tablet.jpg 1x, 
+                ./images/rectangle2-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/rectangle2-mobile.jpg 1x, 
+                ./images/rectangle2-mobile-2x.jpg 2x"
+                media="(max-width: 767px)"> 
+                <img src="./images/rectangle2-desktop.jpg" width="418" alt="Rectangle-2"/>
+              </picture>
+            </li>
+            <li class="portfolio-photos-item">
+              <picture>
+                <source 
+                srcset="./images/rectangle3-desktop.jpg 1x, 
+                ./images/rectangle3-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/rectangle3-tablet.jpg 1x, 
+                ./images/rectangle3-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/rectangle3-mobile.jpg 1x, 
+                ./images/rectangle3-mobile-2x.jpg 2x"
+                media="(max-width: 767px)"> 
+                <img src="./images/rectangle3-desktop.jpg" width="418" alt="Rectangle-3"/>
+              </picture>
+            </li>
+            <li class="portfolio-photos-item">
+              <picture>
+                <source 
+                srcset="./images/rectangle4-desktop.jpg 1x, 
+                ./images/rectangle4-desktop-2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source 
+                srcset="./images/rectangle4-tablet.jpg 1x, 
+                ./images/rectangle4-tablet-2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source 
+                srcset="./images/rectangle4-mobile.jpg 1x, 
+                ./images/rectangle4-mobile-2x.jpg 2x"
+                media="(max-width: 767px)"> 
+                <img src="./images/rectangle4-desktop.jpg" width="418" alt="Rectangle-4"/>
+              </picture>
+            </li>  
           </ul>
         </div>
       </section>
