--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
             <li class="portfolio-photos-item">
               <picture>
                 <source 
+                media="(min-width: 1200px)"
                 srcset="./images/rectangle1-desktop.jpg 1x, 
-                ./images/rectangle1-desktop-2x.jpg 2x"
-                media="(min-width: 1200px)">
+                ./images/rectangle1-desktop-2x.jpg 2x">
                 <source 
                 srcset="./images/rectangle1-tablet.jpg 1x, 
                 ./images/rectangle1-tablet-2x.jpg 2x"
