--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
               </svg>
             </button>  
             <ul class="menu-container-list">
-              <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">About</a></li>
+              <li class="list menu-container-item"><a href="#about" class="link nav menu-container-link">About</a></li>
               <li class="list menu-container-item">
-                <a href="#" class="link nav menu-container-link">Services and prices</a>
+                <a href="#services" class="link nav menu-container-link">Services and prices</a>
               </li>
-              <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">Barbers</a></li>
-              <li class="list menu-container-item"><a href="#" class="link nav menu-container-link">Contacts</a></li>
+              <li class="list menu-container-item"><a href="#barbers-menu" class="link nav menu-container-link">Barbers</a></li>
+              <li class="list menu-container-item"><a href="#contacts-menu" class="link nav menu-container-link">Contacts</a></li>
             </ul>
              <div class="menu-container-contact">
               <a href="tel:+380441111111" class="link nav menu-container-link">+38 044 111 11 11</a>
@@ -86,7 +86,7 @@
             </ul>
           </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
           <div class="container about-list">
           <ul class="about-list-image">
           <li class="list about-item-img">
@@ -134,7 +134,7 @@
           </div>
         </div>
       </section>
-      <section class="elements elements-bg">
+      <section class="elements elements-bg" id="services">
         <div class="container">
           <p class="elements-top-text top-text">Spend your time with the best masters</p>
           <h2 class="elements-title">Services and prices</h2>
@@ -244,7 +244,7 @@
          </div>
         </div>
       </section>
-      <section class="barbers">
+      <section class="barbers" id="barbers-menu">
        <div class="container">
           <p class="barbers-text top-text">For true enjoyers of the atmosphere</p>
           <h2 class="barbers-title">Our barbers</h2>
@@ -475,7 +475,7 @@
       <button type="submit" class="button button-booking">send</button>
     </form>       
                       <div class="contacts">
-                        <h2 class="contacts-title">Contacts</h2>
+                        <h2 class="contacts-title" id="contacts-menu">Contacts</h2>
                         <address class="address-overlay">
                             
                             <div>
