--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       </section>
       <section class="main-booking-contacts">
 
-    <form class="booking"> 
+    <form class="container booking"> 
       <h2 class="booking-title">Online-booking</h2>
       <ul class="main-input">
         <li class="input-list"><label><input class="input" type="text" name="name" placeholder="Name*" required></label></li>
