--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       </section>
       <section class="main-booking-contacts">
 
-       <div class="container booking-contacts">
+       <div class="booking-contacts">
           <form class="online booking"> 
             <h2 class="booking-title">Online-booking</h2>
             <ul class="main-input">
